# hhu-iot-code

./: .gitignore  README.md
Source/doc/: 一些有用的资料.md
data_structure/binary_tree/: app.c  tree.c  tree.h
data_structure/common_queue/: app.c  queue.c  queue.h
data_structure/common_stack/: app.c  stack.c  stack.h
data_structure/cycle_queue/: app.c  queue.c  queue.h
data_structure/maze_solve/: mazeApp.c
data_structure/single_llist_with_head/: app.c  linkedlist.c  linkedlist.h  structure.c
data_structure/single_llist_withnot_head/: app.c  linkedlist.c  linkedlist.h  structure.c  structure.h
data_structure/sort/: app.c  quicksort.c  quicksort.h
image-process-code/: compression.py  demo.py  denoising.py  dft.py  edge_detection.py  enhancement.py  restoration.py  transformation.py
java_code/2162410112_丁新亮_第一周/: 2162410112_丁新亮_第一周.txt  P2.java  P3.java  P4.java
java_code/报告书/: 2162410112_丁新亮_第三周.txt  2162410112_丁新亮_第二周.txt  2162410112_丁新亮_第五周.txt  2162410112_丁新亮_第四周.txt
matlab_test/test_1/: P2_2_2.m  P9_2_1.m  P9_2_3.m  P9_2_4.m
matlab_test/test_2/: P9_5_1.m  P9_5_2.m  P9_5_3.m  circonv.m  cirshift.m
matlab_test/test_3/: P9_8_1.m  P9_8_2.m  impinvr.m  p_butt.m  un_buttap.m
matlab_test/test_4/: P9_9_1_Bartlett.m  P9_9_1_Hamming.m  P9_9_1_Kaiser.m  P9_9_2_Bartlett.m  P9_9_2_Blackman.m  P9_9_2_Kaiser.m  ideal_lp.m
python_code/work/: question1.py  (+1 more)
resume-parser/: README.md  main.py  requirements.txt  test.py
rfid-design/rfid-client/: CMakeLists.txt  SerialPort.h  main.cpp
rfid-design/rfid-client/lib/: download.url
wsn-report/: LICENSE  README.md
(+56 files in other folders)
